# Cancer-Segmentation

./: .gitignore  .pre-commit-config.yaml  README.md  infer.py  pyproject.toml  requirements.txt  test.py  train.py
.devcontainer/: Dockerfile  devcontainer.json
config/: config.yaml  infer.yaml
config/data/: data.yaml
config/loss/: uncertainty_dice_focal.yaml
config/model/: deeplab.yaml  segformer.yaml  unet.yaml
config/trainer/: default.yaml
results/test/deeplab_resnet34/metrics/: classification_report.txt  metrics.json
results/test/deeplab_resnet50/metrics/: classification_report.txt  metrics.json
results/test/segformer_resnet34/metrics/: classification_report.txt  metrics.json
results/test/unet_efficientnet-b3/metrics/: classification_report.txt  metrics.json
results/test/unet_resnet34/metrics/: classification_report.txt  metrics.json
results/test/unet_resnet50/metrics/: classification_report.txt  metrics.json
src/: factories.py
src/data/: dataloader.py  dataset.py  factories.py
src/losses/: factories.py  losses.py
src/metrics/: classification_metrics.py  factories.py  segmentation_metrics.py
src/models/: classification_head.py  factories.py  smp_models.py
src/training/: base_trainer.py  factories.py  trainer.py
src/utils/: checkpoint.py  helper.py  logger.py  visualization.py
