[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "Cancer Segmentation"
version = "0.1.0"
description = "Medical computer vision project with DL and DevOps."
authors = [{ name = "Martrix17" }]
requires-python = ">=3.9"
readme = "README.md"
dependencies = []

[tool.ruff]
select = ["E", "F", "W", "I"]
ignore = []
line-length = 88
target-version = "py311"

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
strict = false
